syntax = "proto3"; //声明了一个版本

package dongxia;    //声明了代码所在的包  相当于c++的namespace

option cc_generic_services = true;  //打开service服务

message ResultCode
{
    int32 errcode = 1;
    bytes errmsg = 2;
    //map<int32,int32> ms=3;
}


//定义登录消息类型 name pwd
message LoginRequest
{
    bytes name =1;
    bytes pwd = 2;
}

//定义登录相应消息类型
message LoginResponse
{
    ResultCode result = 1;
    bool success = 2;
}

message GetFriendListsRequest
{
    uint32 userid = 1;

}

message user
{
    bytes name = 1;
    uint32 age= 2 ;
    enum Sex {
        MAN = 0;
        WOMAN = 1;
    }
    Sex sex = 3;
}

message GetFriendListsResponse
{
    ResultCode result = 1;
    repeated user friend_list = 2;
}

service UserServiceRpc
{
    rpc Login(LoginRequest) returns (LoginRequest);
    rpc GetFriendLists(GetFriendListsRequest) returns(GetFriendListsResponse);
}